# autumn

./: .env.example  .gitignore  CNAME  Cargo.toml  README.md  index.html
assets/: index-2pZISZf2.css  index-DsKmnkIv.js
autumn-bot/: Cargo.toml
autumn-bot/src/: main.rs
autumn-bot/src/events/: word_filter.rs
autumn-commands/: Cargo.toml
autumn-commands/src/: lib.rs
autumn-commands/src/moderation/: ban.rs  case.rs  embeds.rs  escalation_check.rs  kick.rs  logging.rs  mod.rs  modlogchannel.rs  modlogs.rs  notes.rs  permissions.rs  purge.rs  terminate.rs  timeout.rs  unban.rs  untimeout.rs  unwarn.rs  warn.rs  warnings.rs
autumn-commands/src/moderation/case/: case.rs  mod.rs  modlogs.rs  warnings.rs
autumn-commands/src/moderation/config/: aitoggle.rs  escalation.rs  mod.rs  setup.rs
autumn-commands/src/moderation/core/: kick.rs  mod.rs  purge.rs  warn.rs
autumn-commands/src/moderation/reversals/: mod.rs  unban.rs
autumn-commands/src/utility/: embeds.rs  help.rs  mod.rs  pagetest.rs  ping.rs  universe.rs  usage.rs
autumn-core/: Cargo.toml
autumn-core/src/: lib.rs
autumn-database/: Cargo.toml
autumn-database/migrations/: 20260216163000_create_warnings.down.sql  20260216163000_create_warnings.up.sql  20260216170000_add_guild_id_to_warnings.down.sql  20260216170000_add_guild_id_to_warnings.up.sql  20260224160000_create_guild_ai_config.down.sql  20260224160000_create_guild_ai_config.up.sql  20260226180000_create_escalation_config.down.sql  20260226180000_create_escalation_config.up.sql
autumn-database/src/: database.rs  lib.rs
autumn-database/src/cache/: mod.rs  noop_store.rs  redis_store.rs
autumn-database/src/impls/: ai_config.rs  cases.rs  escalation.rs  leveling.rs  llm_chat.rs  mod.rs  modlog_config.rs  notes.rs  rate_limit.rs  warnings.rs  word_filter.rs
autumn-database/src/model/: escalation.rs  leveling.rs  llm_chat.rs  mod.rs  warnings.rs  word_filter.rs
autumn-llm/src/: client.rs  lib.rs  prompt.rs
autumn-utils/: Cargo.toml
autumn-utils/src/: cleanup.rs  confirmation.rs  embed.rs  formatting.rs  lib.rs  pagination.rs  parse.rs  permissions.rs  time.rs
autumn-web/: index.html  package-lock.json  package.json  vite.config.js
autumn-web/src/: index.css
autumn-web/src/components/: Footer.jsx  Hero.jsx  Navbar.jsx  Philosophy.jsx  Protocol.jsx
autumn-web/src/docs/: case-management.mdx  contributing.mdx  moderation.mdx  reversals.mdx  setup.mdx  utility.mdx
autumn-web/src/pages/: Contributing.jsx  Docs.jsx
