[workspace]
members = [
	"autumn-bot",
	"autumn-commands",
	"autumn-core",
	"autumn-database",
	"autumn-utils",
]
default-members = ["autumn-bot"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
dotenvy = "0.15"
poise = "0.6"
rustls = { version = "0.23", features = ["ring"] }
serenity = { version = "0.12", default-features = true, features = ["rustls_backend"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
autumn-bot = { path = "autumn-bot" }
autumn-commands = { path = "autumn-commands" }
autumn-core = { path = "autumn-core" }
autumn-database = { path = "autumn-database" }
autumn-utils = { path = "autumn-utils" }
