[package]
name = "autumn-commands"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
poise = { workspace = true }
serenity = { workspace = true }
autumn-core = { workspace = true }
autumn-database = { workspace = true }
autumn-utils = { workspace = true }
